# OOD

./: .gitignore
Keynote/: Podfile
Keynote/Keynote/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
Keynote/Keynote.xcodeproj/: project.pbxproj
Keynote/Keynote.xcworkspace/: contents.xcworkspacedata
Keynote/KeynoteTests/: KeynoteTests.swift
Keynote/KeynoteUITests/: KeynoteUITests.swift
lab_2/WeatherStation/: CMakeLists.txt  Observer.h  WeatherData.h  main.cpp
lab_3/Streams/: CMakeLists.txt  Chunk.h  IInputDataStream.h  InputStreamDecorators.h  OutputStreams.h  OutputStreamsDecorator.h  main.cpp
lab_3/task_1/: Beverage.h  CChocolate.h  CCoffee.h  CCondimentDecorator.h  CLiquor.h  CTea.h  (+6 more)
lab_5/EditorOnC++/: CEditor.cpp  CEditor.h  CMakeLists.txt  HtmlSaver.cpp  HtmlSaver.h  main.cpp
lab_5/EditorOnC++/command/: CAbstractCommand.cpp  CAbstractCommand.h  CChangeTitleCommand.cpp  CChangeTitleCommand.h  CDeleteItemCommand.cpp  CDeleteItemCommand.h  CInsertImageCommand.cpp  CInsertImageCommand.h  CInsertParagraphCommand.cpp  CInsertParagraphCommand.h  CReplaceParagraphTextCommand.cpp  CReplaceParagraphTextCommand.h  CResizeImageCommand.cpp  CResizeImageCommand.h  ICommand.h
lab_5/EditorOnC++/document/: CConstDocumentItem.cpp  CConstDocumentItem.h  CDocument.cpp  CDocument.h  CDocumentItem.cpp  CDocumentItem.h  CHistory.cpp  CHistory.h  IDocument.h
lab_5/EditorOnC++/document/image/: CImage.cpp  CImage.h  IImage.h
lab_5/EditorOnC++/document/paragraph/: CParagraph.cpp  CParagraph.h  IParagraph.h
lab_5/EditorOnC++/menu/: CMenu.cpp  CMenu.h
(+330 files in other folders)
